[package]
name = "wakeUP"
version = "0.1.0"
edition = "2021"

[package.metadata.bundle]
name = "wakeUP"
identifier = "com.wakeup.app"
icon = ["wakeUP.icns"]
version = "0.1.0"
category = "Utility"
short_description = "Lightweight Wake-on-LAN menu bar tool"
osx_minimum_system_version = "12.0"

[dependencies]
tray-icon = "0.11.0"
wol = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0.1"
anyhow = "1.0.75"
winit = "0.29.9"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
